--- a/projet.html
+++ b/projet.html
@@ -12,8 +12,8 @@
     <h2> Sur cette page, vous allez trouver le projet sur python que nous devions faire, le triangle de Sierpinski (ci-dessous)</h2> 
     <img src="triangle%20de%20sierpinski.png"
          alt="Image en png du triangle de sierpinski">
-    <p class = "construction">Ce projet était un peu complexe, pour être honnête les deux derniers jours des vacances, j'ai pris la plupart de mon temps pour faire ce travail. Le programme est codé entierement sur Python.</p>
-    <p class="explanation">Le projet consiste a automatiser a l'aide du module turtle, un programme permettant de realiser la figure ci contre, le triangle de Sierpinski. Le programme est annoté et donc la description du programme est dans le code directement. </p>
+    <p class = "construction">Ce projet était un peu complexe, pour être honnête les deux derniers jours des vacances, j'ai pris la plupart de mon temps pour faire ce travail. Le programme est codé entièrement sur Python.</p>
+    <p class="explanation">Le projet consiste à automatiser à l'aide du module turtle, un programme permettant de réaliser la figure ci contre, le triangle de Sierpinski. Le programme est annoté et donc la description du programme est dans le code directement. </p>
     <p class = "safe" >Vous trouverez ci-dessous le lien de téléchargement vers le fichiers  du projet en .py, le lien est safe ne vous faites aucun soucis.
         </p>
     <a href="https://www.mediafire.com/file/531efz471ohnt5w/projetpython1.py/file" target="_blank" class="download"> TÉLÉCHARGEMENT</a>
